@@ -4,21 +4,19 @@ import dev.rudyevhenii.crypto_aggregator.auth.domain.User;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 @Getter
 @RequiredArgsConstructor
 public final class SecurityUserDetails implements UserDetails {
-    private static final String DEFAULT_ROLE = "ROLE_USER";
     private final User user;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(DEFAULT_ROLE));
+        return Collections.emptyList();
     }
 
     @Override
